--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,13 +1,14 @@
 @import 'var';
 @import 'mixins';
 @import 'fonts';
-@import 'adaptive-font';
 @import 'null';
+@import 'adaptive-font';
 
 
 body {
     font-family: 'Gotham Pro', sans-serif;
     background: $bgColor;
+    overflow-x: hidden;
 }
 
 .container {
@@ -53,6 +54,8 @@ body {
             left: 0;
             display: block;
         }
+
+        // .header-menu__link
         &__link {
             display: block;
             font-size: 18px;
@@ -102,9 +105,9 @@ body {
 
     // primary-title
     &-title{
-        // font-family: 'Montserrat';
+        font-family: 'Montserrat', sans-serif;
         font-weight: 700;
-        font-size: 24px;
+        @include adaptiv-font(48, 24);
         line-height: 33px;
         span {
             color: $mainColor;
@@ -112,8 +115,8 @@ body {
     }
 
     // primary .desr
-    .desr {
-        font-size: 18px;
+    .descr {
+        @include adaptiv-font(24, 18);
         margin-top: 18px;
         line-height: 28px;
     }
@@ -121,21 +124,17 @@ body {
     // primary .hire-btn
     .hire-btn {
         margin-top: 18px;
-        height: 51px;
         width: 100%;
-        border-radius: 50px;
-        background-color: $mainColor;
-        color: #ffffff;
+    }
 
+    &-about-us {
+        display: none;
     }
 
     // primary-bg
     &-bg {
         position: relative;
-        width: 100%;
-        height: 100%;
         img {
-            position: absolute;
             width: 100%;
             object-fit: cover;
             object-position: center;
@@ -144,8 +143,269 @@ body {
 }
 // primary window end
 
+// about us
+.about {
+    padding: 24px 0 32px;
+
+    &-title {
+        position: relative;
+    }
+
+    &-descr {
+        margin-top: 32px;
+    }
+
+    // about img
+    &-img {
+        margin: 0 auto;
+        margin-top: 32px;
+        position: relative;
+        max-width: 530px;
+        
+        img {
+            width: 100%;
+
+            box-shadow: 6px 6px 0 $mainColor;
+            border-radius: 7px;
+        }
+    }
+
+    &-sub-descr {
+        margin-top: 32px;
+    }
+
+// about__row_grid
+    &__row_grid {
+        position: relative;
+        display: grid;
+        grid-template-rows: repeat(2, auto);
+        grid-template-columns: auto;
+    }
+
+    // about-sub-descr
+    &-sub-descr {
+        grid-row: 3/4;
+    }
+}
+
+.about-bottom {
+    display: none;
+}
+
+.about-inner {
+    position: relative;
+}
+
+p {
+    @include adaptiv-font(18, 16);
+    line-height: 25px;
+    span {
+        background-color: $mainColor;
+        color: #ffffff;
+    }
+}
 
 
+.d-none {
+    display: none;
+}
+
+.btn {
+    height: 51px;
+    width: 269px;
+    border-radius: 50px;
+    background-color: $mainColor;
+    color: #ffffff;
+
+    @include adaptiv-font(18, 16);
+}
+
+.arrow {
+    display: none;
+}
+
+
+// about us end
+
+.process {
+
+    // .process__desct
+
+    &__desct {
+        margin-top: 24px;
+        @include adaptiv-font(24, 18);
+        font-weight: 400;
+        line-height: 28px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: $fontColor;
+        font-family: 'Gotham Pro';
+    }
+
+    // .process__num
+
+    &__num {
+        position: absolute;
+        bottom: -45px;
+        right: -53px;
+
+        span {
+            font-family: 'Helvetica';
+            font-weight: 900;
+            font-size: 288px;
+            color: $mainColor;
+        }
+    }
+
+    // .process__arrow
+
+    &__arrow_left {
+        width: 53px;
+        margin-top: 35px;
+        img {
+            display: block;
+            width: 100%;
+            transform: rotate(180deg);
+        }
+    }
+    &__arrow_right {
+        display: none;
+        img {
+            display: block;
+            width: 100%;
+        }
+    }
+}
+
+
+.application {
+    margin-top: 32px;
+    padding-bottom: 54px;
+
+    // .application__descr
+
+    &__descr {
+        width: 217px;
+        margin-top: 24px;
+        font-family: Gotham Pro;
+        font-size: 18px;
+        line-height: 28px;
+        letter-spacing: 0em;
+        text-align: left;
+
+        span {
+            color: $mainColor;
+        }
+    }
+
+    // .application__footer
+
+    &__footer {
+        margin-top: 24px;
+    }
+
+    &__input{
+        background: #F0F0F0;
+        width: 100%;
+        height: 55px;
+        border-radius: 16px;
+        padding: 20px;
+    }
+    .input_tel {
+        margin-top: 8px;
+    }
+}
+
+.inner {
+
+    // .inner_style
+
+    &_style {
+        padding: 24px;
+    }
+}
+
+.application-btn {
+    margin-top: 24px;
+    width: 100%;
+}
+
+
+
+
+// general styles
+.process-inner {
+    padding: 24px 0 53px 24px;
+
+    position: relative;
+}
+
+
+.swipe {
+    font-family: Gotham Pro;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 25px;
+    letter-spacing: 0em;
+    text-align: left;
+
+    &_mt{
+        margin-top: 75px;
+    }
+}
+
+.inner_style {
+    background: #FFFFFF;
+    border-radius: 12px;
+}
+
+// .title {
+//     height: 47px;
+//     img{
+//         height: 100%;
+//     }
+// }
+
+.about-title,
+.process__title,
+.application__title {
+    position: relative;
+}
+
+.rectangle {
+    height: 68px;
+    max-width: 68px;
+    border: 4px solid $mainColor;
+    
+
+    .title {
+        position: absolute;
+
+        height: 34px;
+        color: $mainColor;
+        
+        font-family: 'Gotham Pro';
+        font-size: 24px;
+        @include adaptiv-font(36, 24);
+        font-weight: 700;
+
+        display: flex;
+        align-items: center;
+        
+        left: 15px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+}
+
+.process__title_bg,
+.application__title_bg{
+    background: #ffffff;
+}
+.title_bg {
+    background-color: $bgColor;
+}
 
 
 
